--- a/fmain.lfm
+++ b/fmain.lfm
@@ -4,8 +4,9 @@ object frmMain: TfrmMain
   Top = 157
   Width = 532
   Caption = 'xlsx Cracker'
-  ClientHeight = 321
+  ClientHeight = 301
   ClientWidth = 532
+  Menu = mnu
   OnCreate = FormCreate
   OnDestroy = FormDestroy
   Position = poScreenCenter
@@ -13,7 +14,7 @@ object frmMain: TfrmMain
   object sb: TStatusBar
     Left = 0
     Height = 23
-    Top = 298
+    Top = 278
     Width = 532
     Panels = <>
   end
@@ -69,10 +70,11 @@ object frmMain: TfrmMain
   end
   object mmo: TMemo
     Left = 0
-    Height = 222
+    Height = 202
     Top = 76
     Width = 532
     Align = alClient
+    ReadOnly = True
     ScrollBars = ssVertical
     TabOrder = 2
   end
@@ -83,5 +85,22 @@ object frmMain: TfrmMain
     InitialDir = 'C:\'
     left = 16
     top = 256
+  end
+  object mnu: TMainMenu
+    left = 60
+    top = 256
+    object MenuItem1: TMenuItem
+      Caption = '&File'
+      object MenuItem2: TMenuItem
+        Caption = 'E&xit'
+        ShortCut = 16472
+        OnClick = MenuItem2Click
+      end
+    end
+    object MenuItem3: TMenuItem
+      Caption = '&About'
+      RightJustify = True
+      OnClick = MenuItem3Click
+    end
   end
 end
