--- a/fmain.lfm
+++ b/fmain.lfm
@@ -1,20 +1,21 @@
 object frmMain: TfrmMain
-  Left = 365
+  Left = 512
   Height = 321
-  Top = 157
+  Top = 347
   Width = 532
   Caption = 'xlsx Cracker'
-  ClientHeight = 301
+  ClientHeight = 293
   ClientWidth = 532
+  Font.Name = 'FreeSans'
   Menu = mnu
   OnCreate = FormCreate
   OnDestroy = FormDestroy
   Position = poScreenCenter
-  LCLVersion = '1.6.0.4'
+  LCLVersion = '1.8.4.0'
   object sb: TStatusBar
     Left = 0
-    Height = 23
-    Top = 278
+    Height = 22
+    Top = 271
     Width = 532
     Panels = <>
   end
@@ -25,14 +26,14 @@ object frmMain: TfrmMain
     Width = 532
     Align = alTop
     Caption = 'Select a file'
-    ClientHeight = 56
-    ClientWidth = 528
+    ClientHeight = 60
+    ClientWidth = 530
     TabOrder = 1
     object edtFilename: TEdit
       Left = 4
-      Height = 24
+      Height = 28
       Top = 0
-      Width = 520
+      Width = 522
       Anchors = [akTop, akLeft, akRight, akBottom]
       ReadOnly = True
       TabOrder = 0
@@ -40,7 +41,7 @@ object frmMain: TfrmMain
     object Button1: TButton
       Left = 4
       Height = 25
-      Top = 28
+      Top = 32
       Width = 75
       Caption = 'Select'
       OnClick = Button1Click
@@ -49,7 +50,7 @@ object frmMain: TfrmMain
     object Button2: TButton
       Left = 364
       Height = 25
-      Top = 28
+      Top = 32
       Width = 75
       Anchors = [akTop, akRight]
       Caption = 'Crack'
@@ -59,7 +60,7 @@ object frmMain: TfrmMain
     object btnProtect: TButton
       Left = 448
       Height = 25
-      Top = 28
+      Top = 32
       Width = 75
       Anchors = [akTop, akRight]
       Caption = 'Protect'
@@ -70,7 +71,7 @@ object frmMain: TfrmMain
   end
   object mmo: TMemo
     Left = 0
-    Height = 202
+    Height = 195
     Top = 76
     Width = 532
     Align = alClient
