--- a/fabout.lfm
+++ b/fabout.lfm
@@ -7,6 +7,7 @@ object frmAbout: TfrmAbout
   Caption = 'About'
   ClientHeight = 296
   ClientWidth = 527
+  Font.Height = -13
   Font.Name = 'FreeSans'
   OnCreate = FormCreate
   Position = poMainFormCenter
@@ -96,6 +97,7 @@ object frmAbout: TfrmAbout
     Top = 60
     Width = 69
     Caption = 'xlsx Cracker'
+    Font.Height = -13
     Font.Name = 'FreeSans'
     ParentColor = False
     ParentFont = False
@@ -108,6 +110,7 @@ object frmAbout: TfrmAbout
     Alignment = taCenter
     AutoSize = False
     Caption = 'Version 0.0.0.0'
+    Font.Height = -13
     Font.Name = 'FreeSans'
     ParentColor = False
     ParentFont = False
@@ -118,6 +121,7 @@ object frmAbout: TfrmAbout
     Top = 12
     Width = 395
     Caption = 'This software is released under "The GPL Version 3":'#13#10#13#10'Copyright 2018 https://github.com/ignobilis'#13#10#13#10'This program is free software: you can redistribute it and/or modify'#10'it under the terms of the GNU General Public License as published by'#10'the Free Software Foundation, either version 3 of the License, or'#10'(at your option) any later version.'#10#10'This program is distributed in the hope that it will be useful,'#10'but WITHOUT ANY WARRANTY; without even the implied warranty of'#10'MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.'#10'See the GNU General Public License for more details.'#10#10'You should have received a copy of the GNU General Public License'#10'along with this program.  If not, see <http://www.gnu.org/licenses/>.'
+    Font.Height = -13
     Font.Name = 'FreeSans'
     ParentColor = False
     ParentFont = False
